<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/shape_for_ble">


    <TextView
        android:id="@+id/titleRemote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textSize="@dimen/font_18"
        android:text="@string/add_new_remote_account"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/edtOtherAccount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/please_input_other_account"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/edtAuthorization"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/please_input_authorization"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btnRemoteCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:background="@color/transparent"
            android:text="@string/dialog_cancel"/>
        <Button
            android:id="@+id/btnRemoteSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:background="@color/transparent"
            android:text="@string/dialog_save"/>
    </LinearLayout>

</LinearLayout>