<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.EducationFragment">

    <Button
        android:id="@+id/btnArticle"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:textSize="@dimen/font_end"
        android:textAllCaps="false"
        android:background="@drawable/shape_transparent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/article"/>

    <Button
        android:id="@+id/btnVideo"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:textSize="@dimen/font_end"
        android:textAllCaps="false"
        android:background="@drawable/shape_transparent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/video"/>

    <Button
        android:id="@+id/btnDiscuss"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:textSize="@dimen/font_end"
        android:textAllCaps="false"
        android:background="@drawable/shape_transparent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/discuss"/>

    <Button
        android:id="@+id/onlineCall"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:textSize="@dimen/font_end"
        android:textAllCaps="false"
        android:background="@drawable/shape_transparent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/onlinecall"/>

</LinearLayout>