<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/yhy_bg"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/account_register"
        android:layout_gravity="center"
        android:textSize="32dp"/>
    <EditText
        android:id="@+id/edtAccountInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:padding="10dp"
        android:layout_gravity="center"
        android:inputType="text"
        android:lines="1"
        android:maxLength="20"
        android:background="@drawable/shape_edit_background"
        android:hint="@string/please_input_account"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:passwordToggleEnabled="true"
        android:textColorHint="@color/colorPrimaryDark"
        app:hintTextColor="@color/red"
        android:background="@drawable/shape_edit_background">
        <EditText
            android:id="@+id/edtPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:padding="10dp"
            android:inputType="textPassword"
            android:maxLength="12"
            android:lines="1"
            android:hint="@string/please_input_password"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="@string/verification"/>
    <RadioGroup
        android:id="@+id/rdGroupRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rdoBtnEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:buttonTint="@color/black"
            android:text="@string/email"/>
        <RadioButton
            android:id="@+id/rtoBtnPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/black"
            android:text="@string/phone"/>
    </RadioGroup>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EmailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/shape_edit_background"
        android:textColorHint="@color/colorPrimaryDark"
        app:hintTextColor="@color/red">
        <EditText
            android:id="@+id/edtEmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:padding="10dp"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:hint="@string/email"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TelCodeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/shape_edit_background"
        android:textColorHint="@color/colorPrimaryDark"
        app:hintTextColor="@color/red"
        android:visibility="gone">
        <EditText
            android:id="@+id/edtTelCodeInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:padding="10dp"
            android:inputType="number"
            android:ems="3"
            android:hint="@string/tel_code"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/MobileLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/shape_edit_background"
        android:textColorHint="@color/colorPrimaryDark"
        app:hintTextColor="@color/red"
        android:visibility="gone">
        <EditText
            android:id="@+id/edtMobileInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:padding="10dp"
            android:inputType="number"
            android:ems="3"
            android:hint="@string/please_input_phone"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRegisterSend"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_gravity="center"
        android:background="@drawable/shape_btn_temperature_pressed"
        android:textColor="@color/white"
        android:text="@string/privacy_confirm"/>
</LinearLayout>